# sshtool

./: .gitignore  CMakeLists.txt  Makefile  README.md  actions.c  actions.h  compile.bat  compile.sh  database.c  database.h  main.c
.github/workflows/: release.yml
